crates/solidity/testing/snapshots/bindings_output/expressions/elementary_casting/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected AddressKeyword or AssemblyKeyword or BoolKeyword or BreakKeyword or ByteKeyword or BytesKeyword or CloseBrace or ContinueKeyword or DecimalLiteral or DoKeyword or DoubleQuotedHexStringLiteral or DoubleQuotedStringLiteral or FalseKeyword or FixedKeyword or ForKeyword or FunctionKeyword or HexLiteral or Identifier or IfKeyword or IntKeyword or MappingKeyword or NewKeyword or OpenBrace or OpenBracket or OpenParen or ReturnKeyword or SingleQuotedHexStringLiteral or SingleQuotedStringLiteral or StringKeyword or SuperKeyword or ThisKeyword or ThrowKeyword or TrueKeyword or UfixedKeyword or UintKeyword or VarKeyword or WhileKeyword.
   ╭─[input.sol:6:9]
   │
 6 │ ╭─▶         payable(a).call("");
   ┆ ┆   
 8 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
    ╭─[input.sol:1:1]
    │
  1 │ contract Test {
    │          ──┬─  
    │            ╰─── def: 1
  2 │     using Lib for uint;
    │           ─┬─  
    │            ╰─── ref: 4
    │ 
  4 │     function test(address a) public {
    │              ──┬─         ┬  
    │                ╰───────────── def: 2
    │                           │  
    │                           ╰── def: 3
  5 │         address(this).balance;
    │                       ───┬───  
    │                          ╰───── ref: built-in
    │ 
 11 │ library Lib {
    │         ─┬─  
    │          ╰─── def: 4
 12 │     function noop(uint x) public returns (uint) {}
    │              ──┬─      ┬  
    │                ╰────────── def: 5
    │                        │  
    │                        ╰── def: 6
────╯
